# CatSneeze_toolkit

./: .gitignore  README.md  RECOVERY_GUIDE.md  config.py  main.py  requirements.txt  shell.py
.github/workflows/: build-firmware.yml
attacks/: ADDING_ATTACKS.md  __init__.py  base.py  registry.py
attacks/ble/: __init__.py  airtag_scanner.py  airtag_spoofer.py  ble_sniffer.py  justworks_scanner.py
attacks/rf/: __init__.py  nrf24_replayer.py  nrf24_sniffer.py  nrf24_spoofer.py  zigbee_sniffer.py
core/: device.py  firmware.py  ui.py
firmware/arduino_test/nrf24_rx/: nrf24_rx.ino
firmware/arduino_test/nrf24_tx/: nrf24_tx.ino
firmware/arduino_test/nrf24_tx_test/: nrf24_tx_test.ino
firmware/arduino_test/nrf24_uart_simulator/: nrf24_uart_simulator.ino
firmware/nrf24_sniffer_cc1352p7/: CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake  cc13x2x7_nortos.lds  ccfg_app.h  nrf24_esb.h  nrf24_sniffer.c  nrf24_sniffer.syscfg  smartrf_settings.c  smartrf_settings.h  smartrf_settings_rx.c  smartrf_settings_rx.h
firmware/nrf24_sniffer_cc1352p7/compiled_firmware/: nrf24_sniffer  nrf24_sniffer.hex  nrf24_sniffer.map
firmware/nrf24_sniffer_cc1352p7/syscfg_pregenerated/: ti_drivers_config.c  ti_drivers_config.h
